tests/backend/checkmach/fail2.output
File "fail2.ml", line 1, characters 5-15:
Error: Annotation check for zero_alloc strict failed on function camlFail2__test_HIDE_STAMP
